overflow fix and work done

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body {
     transition: all 0.3s ease-in-out;
-    overflow-x: hidden;
 }
 .App{
     display: flex;
