--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 html {
     font-family: 'Manrope', sans-serif;
-    overflow-x: hidden;
 }
 
